[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geoprovenance"
version = "0.0.1"
authors = [
  { name="David Shen", email="contact@davidshen.co.uk" },
]
description = "A package for geoprovenance tracking."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
geoprovenance = "geoprovenance.main:main"

[tool.poetry.dependencies]
requests = "^2.32.3"
argparse = "^1.4.0"
