[project]
name = "geoprovenance"
dynamic = ["version"]
authors = [
  { name="David Shen", email="contact@davidshen.co.uk" },
]
description = "A package for ingesting and metadata tracking of geospatial data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry]
version = "0.0.1"

[tool.poetry.scripts]
geoprovenance = "geoprovenance.main:main"

[tool.poetry.dependencies]
requests = "^2.32.3"
argparse = "^1.4.0"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"